vpc-one-region.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "2 Tier VPC - Public and Private Subnets",
  "Metadata" : {
    "AWS::CloudFormation::Interface" : {
      "ParameterGroups" : [
        {    
          "Parameters" : [
          "VPCCIDR",
          "AvailabilityZone1",
          "AvailabilityZone2",
          "Public1SubnetName",
          "Public1CIDR",
          "Public2SubnetName",
          "Public2CIDR",
          "Private1SubnetName",
          "Private1CIDR",
          "Private2SubnetName",
          "Private2CIDR"
          ]    
        }    
      ]    
    }    
  },
  "Parameters": {
    "VPCCIDR": {
      "Type": "String",
      "Default": "192.168.32.0/25",
      "AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})"
    },
    "AvailabilityZone1": {
      "Type": "AWS::EC2::AvailabilityZone::Name"
    },
    "AvailabilityZone2": {
      "Type": "AWS::EC2::AvailabilityZone::Name"
    },
    "Public1SubnetName": {
      "Type": "String",
      "Default": "Public1"
    },
    "Public2SubnetName": {
      "Type": "String",
      "Default": "Public2"
    },
    "Private1SubnetName": {
      "Type": "String",
      "Default": "Private1"
    },
    "Private2SubnetName": {
      "Type": "String",
      "Default": "Private2"
    },
    "Public1CIDR": {
      "Type": "String",
      "Default": "192.168.32.0/27",
      "AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})"
    },
    "Public2CIDR": {
      "Type": "String",
      "Default": "192.168.32.32/27",
      "AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})"
    },
    "Private1CIDR": {
      "Type": "String",
      "Default": "192.168.32.64/27",
      "AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})"
    },
    "Private2CIDR": {
      "Type": "String",
      "Default": "192.168.32.96/27",
      "AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})"
    },
		"BusinessUnitTagValue": {
      "Type": "String",
      "Default": "test"
    },
		"ProjectTeamTagValue": {
      "Type": "String",
      "Default": "test"
    },
		"CostCenterTagValue": {
      "Type": "String",
      "Default": "2019"
    },
		"AccountCodeTagValue": {
      "Type": "String",
      "Default": "test"
    },
		"OwnerTagValue": {
      "Type": "String",
      "Default": "koti"
    },
		"SalesRegionTagValue": {
      "Type": "String",
      "Default": "US"
    },
		"DepartmentTagValue": {
      "Type": "String",
      "Default": "test"
    },
		"LocalTimezoneTagValue": {
      "Type": "String",
      "Default": "America/New_York"
    },
		"DefaultLanguageTagValue": {
      "Type": "String",
      "Default": "English"
    },
		"SDTAdministratorTagValue": {
      "Type": "String",
      "Default": "koti"
    }
  },
  "Resources": {
    "VPC": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": {
          "Ref": "VPCCIDR"
        },
        "EnableDnsSupport": "true",
        "EnableDnsHostnames": "true",
        "Tags": [
          { "Key": "Name", "Value": { "Ref": "AWS::StackName" } },
          { "Key": "Business Unit", "Value": { "Ref": "BusinessUnitTagValue" } },
          { "Key": "Project Team", "Value": { "Ref": "ProjectTeamTagValue" } },
          { "Key": "Cost Center", "Value": { "Ref": "CostCenterTagValue" } },
          { "Key": "Account Code", "Value": { "Ref": "AccountCodeTagValue" } },
          { "Key": "Owner", "Value": { "Ref": "OwnerTagValue" } },
          { "Key": "Sales Region", "Value": { "Ref": "SalesRegionTagValue" } },
          { "Key": "Department", "Value": { "Ref": "DepartmentTagValue" } },
          { "Key": "Local Timezone", "Value": { "Ref": "LocalTimezoneTagValue" } },
          { "Key": "Default Language", "Value": { "Ref": "DefaultLanguageTagValue" } },
          { "Key": "SDT Administator", "Value": { "Ref": "SDTAdministratorTagValue" } }
        ]
      }
    },
    "PublicSubnet1": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": {
          "Ref": "AvailabilityZone1"
        },
        "VpcId": {
          "Ref": "VPC"
        },
        "CidrBlock": {
          "Ref": "Public1CIDR"
        },
        "Tags": [
          {
            "Key": "VPC",
            "Value": {
              "Ref": "AWS::StackName"
            }
          },
          {
            "Key": "Network",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": {
              "Fn::Join": [
                " ",
                [
                  {
                    "Ref": "Public1SubnetName"
                  },
                  {
                    "Ref": "AvailabilityZone1"
                  }
                ]
              ]
            }
          }
        ]
      }
    },
    "PublicSubnet2": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": {
          "Ref": "AvailabilityZone2"
        },
        "VpcId": {
          "Ref": "VPC"
        },
        "CidrBlock": {
          "Ref": "Public2CIDR"
        },
        "Tags": [
          {
            "Key": "VPC",
            "Value": {
              "Ref": "AWS::StackName"
            }
          },
          {
            "Key": "Network",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": {
              "Fn::Join": [
                " ",
                [
                  {
                    "Ref": "Public2SubnetName"
                  },
                  {
                    "Ref": "AvailabilityZone2"
                  }
                ]
              ]
            }
          }
        ]
      }
    },
    "PrivateSubnet1": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": {
          "Ref": "AvailabilityZone1"
        },
        "VpcId": {
          "Ref": "VPC"
        },
        "CidrBlock": {
          "Ref": "Private1CIDR"
        },
        "Tags": [
          {
            "Key": "Application",
            "Value": {
              "Ref": "AWS::StackName"
            }
          },
          {
            "Key": "Network",
            "Value": "Private"
          },
          {
            "Key": "Name",
            "Value": {
              "Fn::Join": [
                " ",
                [
                  {
                    "Ref": "Private1SubnetName"
                  },
                  {
                    "Ref": "AvailabilityZone1"
                  }
                ]
              ]
            }
          }
        ]
      }
    },
    "PrivateSubnet2": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": {
          "Ref": "AvailabilityZone2"
        },
        "VpcId": {
          "Ref": "VPC"
        },
        "CidrBlock": {
          "Ref": "Private2CIDR"
        },
        "Tags": [
          {
            "Key": "Application",
            "Value": {
              "Ref": "AWS::StackName"
            }
          },
          {
            "Key": "Network",
            "Value": "Private"
          },
          {
            "Key": "Name",
            "Value": {
              "Fn::Join": [
                " ",
                [
                  {
                    "Ref": "Private2SubnetName"
                  },
                  {
                    "Ref": "AvailabilityZone2"
                  }
                ]
              ]
            }
          }
        ]
      }
    },
    "InternetGateway": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Application",
            "Value": {
              "Ref": "AWS::StackName"
            }
          },
          {
            "Key": "Network",
            "Value": "Public"
          }
        ]
      }
    },
    "AttachGateway": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "InternetGatewayId": {
          "Ref": "InternetGateway"
        }
      }
    },
    "NATGateway": {
      "DependsOn": "AttachGateway",
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "NATGatewayEIP",
            "AllocationId"
          ]
        },
        "SubnetId": {
          "Ref": "PublicSubnet1"
        }
      }
    },
    "NATGatewayEIP": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc"
      }
    },
    "NATGateway2": {
      "DependsOn": "AttachGateway",
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "NATGatewayEIP2",
            "AllocationId"
          ]
        },
        "SubnetId": {
          "Ref": "PublicSubnet2"
        }
      }
    },
    "NATGatewayEIP2": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc"
      }
    },
    "S3Endpoint": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Properties": {
        "PolicyDocument": {
          "Version": "2012-10-17",
          "Statement": [
            {
              "Effect": "Allow",
              "Principal": "*",
              "Action": [
                "s3:*"
              ],
              "Resource": [
                "arn:aws:s3:::*"
              ]
            }
          ]
        },
        "RouteTableIds": [
          {
            "Ref": "PrivateRouteTable"
          },
          {
            "Ref": "PrivateRouteTable2"
          }
        ],
        "ServiceName": {
          "Fn::Join": [
            "",
            [
              "com.amazonaws.",
              {
                "Ref": "AWS::Region"
              },
              ".s3"
            ]
          ]
        },
        "VpcId": {
          "Ref": "VPC"
        }
      }
    },
    "VPNGateway": {
      "Type": "AWS::EC2::VPNGateway",
      "Properties": {
        "Type": "ipsec.1",
        "Tags": [
          {
            "Key": "Name",
            "Value": "PrivateGateway"
          }
        ]
      }
    },
    "AttachVpnGateway": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "VpnGatewayId": {
          "Ref": "VPNGateway"
        }
      }
    },
    "VPNGatewayRoutePropPrivate": {
      "DependsOn": "AttachVpnGateway",
      "Type": "AWS::EC2::VPNGatewayRoutePropagation",
      "Properties": {
        "RouteTableIds": [
          {
            "Ref": "PrivateRouteTable"
          },
          {
            "Ref": "PrivateRouteTable2"
          }
        ],
        "VpnGatewayId": {
          "Ref": "VPNGateway"
        }
      }
    },
    "VPNGatewayRoutePropPublic": {
      "DependsOn": "AttachVpnGateway",
      "Type": "AWS::EC2::VPNGatewayRoutePropagation",
      "Properties": {
        "RouteTableIds": [
          {
            "Ref": "PublicRouteTable"
          }
        ],
        "VpnGatewayId": {
          "Ref": "VPNGateway"
        }
      }
    },
    "PublicRouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "PublicRouteTable"
          }
        ]
      }
    },
    "PublicRoute": {
      "Type": "AWS::EC2::Route",
      "DependsOn": "AttachGateway",
      "Properties": {
        "RouteTableId": {
          "Ref": "PublicRouteTable"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "InternetGateway"
        }
      }
    },
    "PublicSubnet1RouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "PublicSubnet1"
        },
        "RouteTableId": {
          "Ref": "PublicRouteTable"
        }
      }
    },
    "PublicSubnet2RouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "PublicSubnet2"
        },
        "RouteTableId": {
          "Ref": "PublicRouteTable"
        }
      }
    },
    "PrivateRouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "PrivateRouteTable"
          }
        ]
      }
    },
    "PrivateRoute1": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "PrivateRouteTable"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "NATGateway"
        }
      }
    },
    "PrivateRouteTable2": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "PrivateRouteTable2"
          }
        ]
      }
    },
    "PrivateRoute2": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "PrivateRouteTable2"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "NATGateway2"
        }
      }
    },
    "PrivateSubnet1RouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "PrivateSubnet1"
        },
        "RouteTableId": {
          "Ref": "PrivateRouteTable"
        }
      }
    },
    "PrivateSubnet2RouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "PrivateSubnet2"
        },
        "RouteTableId": {
          "Ref": "PrivateRouteTable2"
        }
      }
    }
  },
  "Outputs": {
    "Vpc": {
      "Value": {
        "Ref": "VPC"
      },
      "Export" : { "Name" : {"Fn::Sub": "${AWS::StackName}-VPC" }}
    },
    "VpcCidr": {
      "Value": {
        "Ref": "VPCCIDR"
      },
      "Export" : { "Name" : {"Fn::Sub": "${AWS::StackName}-VPCCIDR" }}
    },
    "PublicSubnet1": {
      "Value": {
        "Ref": "PublicSubnet1"
      },
      "Export" : { "Name" : {"Fn::Sub": "${AWS::StackName}-PublicSubnet1" }}
    },
    "PublicCidr1": {
      "Value": {
        "Ref": "Public1CIDR"
      },
      "Export" : { "Name" : {"Fn::Sub": "${AWS::StackName}-Public1CIDR" }}
    },
    "PublicSubnet2": {
      "Value": {
        "Ref": "PublicSubnet2"
      },
      "Export" : { "Name" : {"Fn::Sub": "${AWS::StackName}-PublicSubnet2" }}
    },
    "PublicCidr2": {
      "Value": {
        "Ref": "Public2CIDR"
      },
      "Export" : { "Name" : {"Fn::Sub": "${AWS::StackName}-Public2CIDR" }}
    },
    "PrivateSubnet1": {
      "Value": {
        "Ref": "PrivateSubnet1"
      },
      "Export" : { "Name" : {"Fn::Sub": "${AWS::StackName}-PrivateSubnet1" }}
    },
    "PrivateCidr1": {
      "Value": {
        "Ref": "Private1CIDR"
      },
      "Export" : { "Name" : {"Fn::Sub": "${AWS::StackName}-Private1CIDR" }}
    },
    "PrivateSubnet2": {
      "Value": {
        "Ref": "PrivateSubnet2"
      },
      "Export" : { "Name" : {"Fn::Sub": "${AWS::StackName}-PrivateSubnet2" }}
    },
    "PrivateCidr2": {
      "Value": {
        "Ref": "Private2CIDR"
      },
      "Export" : { "Name" : {"Fn::Sub": "${AWS::StackName}-Private2CIDR" }}
    },
    "AvailabilityZone1": {
      "Value": {
        "Ref": "AvailabilityZone1"
      },
      "Export" : { "Name" : {"Fn::Sub": "${AWS::StackName}-AvailabilityZone1" }}
    },
    "AvailabilityZone2": {
      "Value": {
        "Ref": "AvailabilityZone2"
      },
      "Export" : { "Name" : {"Fn::Sub": "${AWS::StackName}-AvailabilityZone2" }}
    }
  }
}
